SERVER-45292 fix isMetadataDifferent logic in chunk manager targeter